--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
+    "httpie": "^1.1.2",
     "knex": "^0.95.10",
     "sqlite3": "^5.0.2"
   },
